--- a/AndroidStudio/ACalculador2/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidStudio/ACalculador2/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Mar 27 19:52:23 CET 2020
+#Mon Mar 30 12:42:34 CEST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
