--- a/AndroidStudio/final_app/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/final_app/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ficharActivity"></activity>
+        <activity android:name=".RegistrarActivity"></activity>
+        <activity android:name=".ficharActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
